--- a/404.html
+++ b/404.html
@@ -4,6 +4,9 @@ layout: default
 ---
 
 <style type="text/css" media="screen">
+  .navigation {
+    background: #171717;
+  }
   .container {
     margin: 100;
     text-align: center;
@@ -12,16 +15,12 @@ layout: default
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: #171717;
   }
   h1 {
     margin: 30px 0;
     font-size: 4em;
     line-height: 1;
     letter-spacing: -1px;
-  }
-  .container h1, p {
-    color: white;
   }
 </style>
 
