fix styling on 404

--- a/404.html
+++ b/404.html
@@ -4,13 +4,17 @@ layout: default
 ---
 
 <style type="text/css" media="screen">
+body {
+  min-height: 100vh;
+}
   .navigation {
     background: #171717;
   }
   .container {
-    margin: 100;
+color: white;
+    margin-top: 200px;
+    height: 100%;
     text-align: center;
-    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -30,3 +34,4 @@ layout: default
   <p><strong>Page not found :(</strong></p>
   <p>The requested page could not be found.</p>
 </div>
+<a href="mailto:jervis@appaudits.co.uk">jervis@appaudits.co.uk</a>
